fixed overflow Y

--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -24,4 +24,5 @@ a {
 
 #page-wrap {
   height: 100%;
+  overflow: auto;
 }
